# kubaefik-dns

./: Cargo.toml  Dockerfile  README.md
src/: client.rs  config.rs  error.rs  handler.rs  kube.rs  main.rs  options.rs
