[package]
name = "kubaefik-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
trust-dns-resolver = { version = "0.22.0", features = [
  "dns-over-tls",
  "dns-over-rustls",
] }
anyhow = "1.0.68"
async-trait = "0.1.61"
clap = { version = "4.1.1", features = ["derive", "env"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
trust-dns-server = "0.22.0"
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
once_cell = "1.17.1"
chrono = "0.4.26"
